--- a/TODO.txt
+++ b/TODO.txt
@@ -2,6 +2,7 @@
 mysql sql init file
 dev@cloudbees
 run@cloudbees
+add javamelody + hyperlink in menu
 
 add link "defined triggers" in menu to a list of all triggers with links to jobs
 add handler for "org.quartz.SchedulerException: Job instantiation failed" -> logs
