--- a/README.textile
+++ b/README.textile
@@ -2,3 +2,7 @@
 h1. Glass, a ui for quartz
 
 Quartz is the standard scheduler for java but it lacks of a pleasant web ui.
+
+h2. Cloudbees
+
+Glass is continuously deploy and running on cloudbees at http://glass.dbourdette.cloudbees.net/
