caps in table headers

--- a/TODO.txt
+++ b/TODO.txt
@@ -3,7 +3,7 @@ x DEV@cloudbees
 x mysql sql init file
 x run@cloudbees
 x set link on github homepage
-- add link from cron expression to anchor for doc in same page
+x add link from cron expression to anchor for doc in same page
 - caps in table headers
 - restart icon
 - in memory job store for local tests
