add link "defined triggers" in menu to a list of all triggers with links to jobs

--- a/TODO.txt
+++ b/TODO.txt
@@ -9,10 +9,13 @@ x restart icon
 x in memory job store for local tests
 x removed favico
 x add handler for "org.quartz.SchedulerException: Job instantiation failed" -> logs
-- add link "defined triggers" in menu to a list of all triggers with links to jobs
+x add link "defined triggers" in menu to a list of all triggers with links to jobs
+- support -1 as no limit for simple trigger repeat attribute
+- in TriggerWrapperForJsp add planification attribute for cron and simple triggers and display this in jsp instead of cron expression
 - groovy jobs (saved in db ? mongo ? memory ?)
 - add javamelody (+ configuration) + hyperlink in menu
 - 500 when creating a job : java.lang.IllegalArgumentException: Job class must implement the Job interface -> better message on screen
+- add hyperlink for simple trigger no limit (sets -1 in field)
 
 v 0.2
 - when using in memory store, try to serialize and load jobs / trigges from tmp dir ?
