--- a/TODO.txt
+++ b/TODO.txt
@@ -12,10 +12,11 @@ x add handler for "org.quartz.SchedulerException: Job instantiation failed" -> l
 x add link "defined triggers" in menu to a list of all triggers with links to jobs
 x support -1 as no limit for simple trigger repeat attribute
 x delete trigger
-- in TriggerWrapperForJsp add planification attribute for cron and simple triggers and display this in jsp instead of cron expression
+x in TriggerWrapperForJsp add planification attribute for cron and simple triggers and display this in jsp instead of cron expression
 - groovy jobs (saved in db ? mongo ? memory ?)
 - add javamelody (+ configuration) + hyperlink in menu
 - 500 when creating a job : java.lang.IllegalArgumentException: Job class must implement the Job interface -> better message on screen
+- 500 when creating a job : Unable to store Trigger with name: 'test trigger' and group: 'DEFAULT', because one already exists with this identification -> better message on screen
 - add hyperlink for simple trigger no limit (sets -1 in field)
 
 v 0.2
