--- a/TODO.txt
+++ b/TODO.txt
@@ -14,8 +14,11 @@ x support -1 as no limit for simple trigger repeat attribute
 x delete trigger
 x in TriggerWrapperForJsp add planification attribute for cron and simple triggers and display this in jsp instead of cron expression
 x JobArgumentBean -> JsonJobArgument (nope cause it's not used only for json, done some refactoring instead)
-- properties -> dataMap
+x properties -> dataMap
 - be able to use glass a base for another war
+- remove unneeded dependencies
+- configure velovity tools (VelocityToolsView)
+- configure cloudbees to build war (-P test) and jar file
 
 v 0.2
 - add javamelody (+ configuration) + hyperlink in menu
