--- a/TODO.txt
+++ b/TODO.txt
@@ -25,7 +25,8 @@ x remove apache commons io
 x remove velocity tools
 x start time for triggers ("leave blank to start now")
 x default repeat is 0 ("leave blank for one shot")
-- planification (0 times in 0ms)
+x planification (0 times in 0ms)
+- planification on dashboard
 - spring conversion for jobs : date, numbers...
 - @Inject in jobs
 - inject @JobParamters values (no setter required)
