--- a/TODO.txt
+++ b/TODO.txt
@@ -28,12 +28,14 @@ x default repeat is 0 ("leave blank for one shot")
 x planification (0 times in 0ms)
 x @Inject in jobs (nope, better user http://www.gridshore.nl/2009/01/27/injecting-domain-objects-with-spring/)
 x inject @JobParamters values (no setter required)
-- spring conversion for jobs : date, numbers...
+x problem when multiple job parameters in parameters table in template (missing a </tr> ?)
+x spring conversion for jobs : date, numbers...
+- use standard (ISO) date patterns
 - planification on dashboard
+- duration on job and triggers screens
 - logs config as info (slf4j) at startup
 - format duration on dashboard
 - stateful vs non stateful jobs
-- problem when multiple job parameters in parameters table in template (missing a </tr> ?)
 - correct misfire configuration (http://www.quartz-scheduler.org/documentation/quartz-2.x/tutorials/tutorial-lesson-05)
 v 0.1-beta3 - quality
 - selenium tests
