remove $revision in file headers

--- a/TODO.txt
+++ b/TODO.txt
@@ -41,8 +41,8 @@ x stateful vs non stateful jobs (quartz 2.0 -> @DisallowConcurrentExecution and 
 x correct misfire configuration (http://www.quartz-scheduler.org/documentation/quartz-2.x/tutorials/tutorial-lesson-05) (using default : smar policy)
 v 0.1-beta3 - bugs
 x imports
+x remove $revision in file headers
 - move glass servlet to /glass so apps can have their own resources
-- $revision in file headers
 - use iso date pattern for all date formats
 - org/glass/velocity/new_job_form.vm [line 38, column 51] : Right side ($form.clazz) of '==' operation has null value
 - find a public maven repo for jar files (oss sonatype ?)
