--- a/TODO.txt
+++ b/TODO.txt
@@ -39,20 +39,19 @@ x logs config as info (slf4j) at startup
 x view config page (dateFormat, store, tablePrefix....)
 x stateful vs non stateful jobs (quartz 2.0 -> @DisallowConcurrentExecution and @PersistJobDataAfterExecution)
 x correct misfire configuration (http://www.quartz-scheduler.org/documentation/quartz-2.x/tutorials/tutorial-lesson-05) (using default : smar policy)
-v 0.1-beta3 - bugs
+v 0.1-beta3 - be able to use glass a base for another war (truly)
 x imports
 x remove $revision in file headers
 x use iso date pattern for all date formats
 x do not add to model in AddToModelInterceptor when redirecting
 x find a public maven repo for jar files => cloud bees
-- org/glass/velocity/new_job_form.vm [line 38, column 51] : Right side ($form.clazz) of '==' operation has null value
-- move glass servlet to /glass so apps can have their own resources
-
+x move glass servlet to /glass so apps can have their own resources
 v 0.1-beta4 - quality
 - selenium tests
 - quality reports (pmd ?)
 - kill code duplication
 - documentation on gh-pages
+- org/glass/velocity/new_job_form.vm [line 38, column 51] : Right side ($form.clazz) of '==' operation has null value
 v 0.1-beta5 - history and logs
 - logs pagination
 - history pagination
