--- a/TODO.txt
+++ b/TODO.txt
@@ -48,7 +48,8 @@ x find a public maven repo for jar files => cloud bees
 x move glass servlet to /glass so apps can have their own resources
 v 0.1-beta4 - quality
 x displaying arg with js is broken
-- in job args, say "Job arguments for class xxx" (easy coy - paste for job name)
+x add a proposal for job name when creating a job
+- errors in red
 - display job name in h2 when in job page
 - selenium tests
 - quality reports (pmd ?)
