--- a/TODO.txt
+++ b/TODO.txt
@@ -49,13 +49,13 @@ x move glass servlet to /glass so apps can have their own resources
 v 0.1-beta4 - quality
 x displaying arg with js is broken
 x add a proposal for job name when creating a job
-- errors in red
+x errors in red
 - display job name in h2 when in job page
-- selenium tests
 - quality reports (pmd ?)
 - kill code duplication
-- documentation on gh-pages
 - org/glass/velocity/new_job_form.vm [line 38, column 51] : Right side ($form.clazz) of '==' operation has null value
+- update description when picking a job class on new job screen
+- JobUtils for spring -> Spring.getBean in spring package with no context param
 v 0.1-beta5 - history and logs
 - logs pagination
 - history pagination
@@ -64,6 +64,11 @@ v 0.1-beta5 - history and logs
 - better logging api
 - "more" button on exception (up to non java and non quartz packages)
 - regroup items on history (start and stop for same job) (bases on what id ? object reference id ?)
+- logs and history in db for jdbc stores
+v 0.1-beta6 - selenium
+- selenium tests
+v 0.1-beta7 - documentation
+- documentation on gh-pages
 
 v 0.2 - smooth
 - remove apache commons lang
