quality reports : mvn pmd:pmd and mvn pmd:cdp

--- a/TODO.txt
+++ b/TODO.txt
@@ -52,11 +52,14 @@ x add a proposal for job name when creating a job
 x errors in red
 x display job name in h2 when in job page
 x JobUtils for spring -> Spring.getBean
+x quality reports : mvn pmd:pmd and mvn pmd:cdp
 - org/glass/velocity/new_job_form.vm [line 38, column 51] : Right side ($form.clazz) of '==' operation has null value
 - update description when picking a job class on new job screen
-- quality reports (pmd ?)
 - kill code duplication
 - proper logging facilities
+- publish source and javadoc to release repo
+- release with maven
+- repositories in settings.xml ?
 v 0.1-beta5 - history and logs
 - logs pagination
 - history pagination
