--- a/TODO.txt
+++ b/TODO.txt
@@ -53,6 +53,7 @@ x errors in red
 x display job name in h2 when in job page
 x JobUtils for spring -> Spring.getBean
 x quality reports : mvn pmd:pmd and mvn pmd:cdp
+x remove commons logging and log4j
 - org/glass/velocity/new_job_form.vm [line 38, column 51] : Right side ($form.clazz) of '==' operation has null value
 - update description when picking a job class on new job screen
 - kill code duplication
