--- a/TODO.txt
+++ b/TODO.txt
@@ -56,7 +56,7 @@ x quality reports : mvn pmd:pmd and mvn pmd:cdp
 x remove commons logging and log4j
 x add findbugs plugin
 x kill code duplication
-- kill bugs reported in findBugs
+x kill bugs reported in findBugs
 - update description when picking a job class on new job screen
 - proper logging facilities
 - repositories in settings.xml ?
