--- a/TODO.txt
+++ b/TODO.txt
@@ -67,12 +67,12 @@ v 0.1-beta5 - history and logs
 - history pagination
 - fold exception and messages after a few lines
 - avoid overflow on the right of logs
-- better logging api
 - "more" button on exception (up to non java and non quartz packages)
 - regroup items on history (start and stop for same job) (bases on what id ? object reference id ?)
 - logs and history in db for jdbc stores
 - varargs for Log (slf4j style : {} ?)
 - colored logs using log level in log page
+- release using http://www.sonatype.com/people/2009/09/maven-tips-and-tricks-using-github/ then publish to cloudbeeswith webdav ?
 v 0.1-beta6 - selenium
 - selenium tests
 v 0.1-beta7 - documentation
