--- a/TODO.txt
+++ b/TODO.txt
@@ -63,16 +63,18 @@ x repositories in settings.xml : nope
 x publish source and javadoc to release repo (use webdav for releases)
 x org/glass/velocity/new_job_form.vm [line 38, column 51] : Right side ($form.clazz) of '==' operation has null value (http://robertmarkbramprogrammer.blogspot.com/2010/10/left-side-xx-of-y-operation-has-null.html)
 v 0.1-beta5 - history and logs
-- logs pagination
+x regroup items on history (start and stop for same job)
 - history pagination
+- logs pagination
 - fold exception and messages after a few lines
 - avoid overflow on the right of logs
 - "more" button on exception (up to non java and non quartz packages)
-- regroup items on history (start and stop for same job) (bases on what id ? object reference id ?)
 - logs and history in db for jdbc stores
 - varargs for Log (slf4j style : {} ?)
 - colored logs using log level in log page
 - release using http://www.sonatype.com/people/2009/09/maven-tips-and-tricks-using-github/ then publish to cloudbeeswith webdav ?
+- see only running jobs in history
+- better table formatting (center dates, status...)
 v 0.1-beta6 - selenium
 - selenium tests
 v 0.1-beta7 - documentation
