--- a/TODO.txt
+++ b/TODO.txt
@@ -67,9 +67,9 @@ x regroup items on history (start and stop for same job)
 x history pagination
 x logs pagination
 x format stacktrace in logs
-- format stacktrace in history
-- replace all <pre> by code css class
+x format stacktrace in history
 - fold exception and messages after a few lines
+x replace all <pre> by code css class
 - avoid overflow on the right of logs
 - "more" button on exception (up to non java and non quartz packages)
 - logs and history in db for jdbc stores
