--- a/TODO.txt
+++ b/TODO.txt
@@ -68,13 +68,14 @@ x history pagination
 x logs pagination
 x format stacktrace in logs
 x format stacktrace in history
-- fold exception and messages after a few lines
 x replace all <pre> by code css class
-- avoid overflow on the right of logs
-- "more" button on exception (up to non java and non quartz packages)
-- logs and history in db for jdbc stores
+x fold exception and messages after a few lines
+x avoid overflow on the right of logs
+x "see stacktrace" button on exceptions
 - varargs for Log (slf4j style : {} ?)
 - colored logs using log level in log page
+- job group and name in logs ?
+- logs and history in db for jdbc stores
 - release using http://www.sonatype.com/people/2009/09/maven-tips-and-tricks-using-github/ then publish to cloudbeeswith webdav ?
 - see only running jobs in history
 - better table formatting (center dates, status...)
