--- a/TODO.txt
+++ b/TODO.txt
@@ -74,14 +74,14 @@ x avoid overflow on the right of logs
 x "see stacktrace" button on exceptions
 x varargs for Log using slf4j style : {}
 x colored logs using log level in log page
-- "see stacktrace" button on exceptions in execution history
-- colored logs in execution history page
+x see datamap in run history
+- show @DisallowConcurrentExecution and @PersistJobDataAfterExecution in new job and job pages
+- see only running jobs in history
 - job group and name in logs ?
 - logs and history in db for jdbc stores
 - release using http://www.sonatype.com/people/2009/09/maven-tips-and-tricks-using-github/ then publish to cloudbeeswith webdav ?
-- see only running jobs in history
 - better table formatting (center dates, status...)
-- trigger stays in list if he misfires
+- trigger stays in list if he misfires and produces no run history
 v 0.1-beta6 - selenium
 - selenium tests
 v 0.1-beta7 - documentation
