--- a/TODO.txt
+++ b/TODO.txt
@@ -81,6 +81,9 @@ x link history and logs
 - job group and name in logs ?
 - better table formatting (center dates, status...)
 - logs and history in db for jdbc stores
+- query form for history page (job, trriger...)
+- history links in job screen (from job and triggers)
+- logLevel (?) parameter for all jobs (default is WARN)
 - trigger stays in list if he misfires and produces no run history
 - release using http://www.sonatype.com/people/2009/09/maven-tips-and-tricks-using-github/ then publish to cloudbeeswith webdav ?
 v 0.1-beta6 - selenium
